final render config